Ver Final
Ultimas validaciones y arreglo de interfaz